# esp-apple-homekit-adk

./: .gitignore  .gitmodules  README.md
examples/Lightbulb/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/Lightbulb/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_wifi.c
port/: CMakeLists.txt  Kconfig.projbuild
port/include/: HAPPlatform+Init.h  HAPPlatformAccessorySetup+Init.h  HAPPlatformBLEPeripheralManager+Init.h  HAPPlatformFileHandle.h  HAPPlatformKeyValueStore+Init.h  HAPPlatformKeyValueStore+SDKDomains.h  HAPPlatformLog+Init.h  HAPPlatformMFiHWAuth+Init.h  HAPPlatformMFiTokenAuth+Init.h  HAPPlatformRunLoop+Init.h  HAPPlatformServiceDiscovery+Init.h  HAPPlatformTCPStreamManager+Init.h
port/src/: HAPPlatform.c  HAPPlatformAbort.c  HAPPlatformAccessorySetup.c  HAPPlatformAccessorySetupDisplay.c  HAPPlatformAccessorySetupNFC.c  HAPPlatformBLEPeripheralManager.c  HAPPlatformClock.c  HAPPlatformKeyValueStore.c  HAPPlatformLog.c  HAPPlatformMFiHWAuth.c  HAPPlatformMFiTokenAuth.c  HAPPlatformRandomNumber.c  HAPPlatformRunLoop.c  HAPPlatformServiceDiscovery.c  HAPPlatformTCPStreamManager.c
tools/accessory_setup/: 40.10  40.11  accessory_setup.csv
